# florianbrand.de

./: .gitignore  Dockerfile  feeds.py  main.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  generate-feeds.yml
assets/: a11y-light.css  styles.css
data/: papers.yaml
feeds/: atom.xml
posts/: fasthtml-intro.md  llm-programmer-tutorial.md  odr-prompt.md  odr.md  uv-intro.md
