[project]
name = "florianbrand.de"
version = "1.0.0"
description = "The FastHTML site of florianbrand.de"
requires-python = ">=3.12"
dependencies = [
    "fh-bootstrap>=0.0.3",
    "python-frontmatter>=1.1.0",
    "markdown-it-py[plugins]>=3.0.0",
    "python-fasthtml>=0.6.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["assets*", "posts*"]
